로그인 기능 추가

--- a/myapp/lib/src/main/resources/application.properties
+++ b/myapp/lib/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 #spring.h2.console.enabled=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=     
@@ -15,3 +15,5 @@ spring.h2.console.enabled=true
 #spring.mvc.view.suffix=.jsp
 
 spring.profiles.include=oauth
+
+spring.session.store-type=jdbc
