--- a/myapp/lib/build.gradle
+++ b/myapp/lib/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     }
 }
 
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
@@ -50,4 +51,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+
+//compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
