--- a/myapp/lib/build.gradle
+++ b/myapp/lib/build.gradle
@@ -52,6 +52,7 @@ test {
     useJUnitPlatform()
 }
 
+compileJava.options.encoding = 'UTF-8'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
