--- a/myapp/lib/build.gradle
+++ b/myapp/lib/build.gradle
@@ -57,3 +57,7 @@ compileJava.options.encoding = 'UTF-8'
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
+processResources {
+	filteringCharser 'UTF-8'
+}
