--- a/myapp/lib/build.gradle
+++ b/myapp/lib/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('org.projectlombok:lombok')
+    implementation('org.projectlombok:lombok:1.8.24')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('com.h2database:h2')
     implementation('org.springframework.boot:spring-boot-starter-mustache')
