--- a/myapp/lib/build.gradle
+++ b/myapp/lib/build.gradle
@@ -25,14 +25,18 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('org.projectlombok:lombok:1.8.24')
+    
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('com.h2database:h2')
-    implementation('org.springframework.boot:spring-boot-starter-mustache')
-    
+    implementation('org.springframework.boot:spring-boot-starter-mustache')    
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
     
     implementation('org.springframework.session:spring-session-jdbc')
+    
+    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.projectlombok:lombok'
     
     developmentOnly ('org.springframework.boot:spring-boot-devtools')
 
