--- a/myapp/lib/build.gradle
+++ b/myapp/lib/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     
     implementation('org.springframework.session:spring-session-jdbc')
     
+    implementation("org.mariadb.jdbc:mariadb-java-client")
+
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
