--- a/myapp/lib/build.gradle
+++ b/myapp/lib/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     
     implementation('org.springframework.session:spring-session-jdbc')
     
-   // implementation("org.mariadb.jdbc:mariadb-java-client")
+    implementation("org.mariadb.jdbc:mariadb-java-client")
 
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.projectlombok:lombok'
